--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,13 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   # flutter_native_timezone: ^1.1.0
   flutter_timezone: ^3.0.1
+  intl: ^0.19.0
+  google_fonts: ^6.2.1
+  date_picker_timeline: ^1.2.6
+  sqflite: ^2.3.3+1
   
 
+  timezone: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
