--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   get_storage: ^2.1.1
-  flutter_local_notifications: ^17.2.2
+  flutter_local_notifications: ^9.9.1
   # flutter_native_timezone: ^1.1.0
   flutter_timezone: ^3.0.1
+  permission_handler: ^11.2.0
   intl: ^0.19.0
   google_fonts: ^6.2.1
   date_picker_timeline: ^1.2.6
